--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
   "name": "ppotto_bff",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": {
+    "name": "argon1025",
+    "email": "argon1025@gmail.com",
+    "url": "<https://github.com/argon1025>"
+  },
+  "contributors": [
+    {
+      "name": "Daphne-dev",
+      "email": "daphne01215@gmail.com",
+      "url": "<https://github.com/daphne01215>"
+    }
+  ],
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,6 +32,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "3.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "reflect-metadata": "^0.1.13",
@@ -37,7 +49,10 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
