refactor: 내부 서비스명 {serviceName}Client로 통일 및 에러 처리 수정

--- a/environments/.env.development
+++ b/environments/.env.development
@@ -12,4 +12,4 @@ AUTH_JWT_SECRET='my-auth-jwt-secret'
 AUTH_JWT_EXPIRE='1d'
 
 # MSA 설정
-USER_API_PATH=http://localhost:8080
+USER_CLIENT_PATH=http://localhost:8080
