--- a/environments/.env.local
+++ b/environments/.env.local
@@ -12,4 +12,4 @@ AUTH_JWT_SECRET='my-auth-jwt-secret'
 AUTH_JWT_EXPIRE='1d'
 
 # MSA 설정
-USER_API_PATH=http://localhost:8080
+USER_CLIENT_PATH=http://localhost:8080
