[#7] 이메일 인증 기능 (#8)
* feat: user 서비스 패키지 추가

* chore: strictPropertyInitialization 옵션 비활성화

* chore: axios 패키지 추가

* chore: 디버깅 설정 추가

* chore: 환경변수 설정 위치 변경

* feat: axios 및 전체 에러 처리 추가

* feat: PPOTTO User 서비스 추가

* feat: 인증 요청 API

* feat: swagger 추가

* chore: 누락된 swagger 설정 추가

* refactor: BFF 및 내부 MSA 서비스에 대해 일관된 에러 처리가 되도록 에러 로직 수정

* fix: 인증 요청 시 JWT를 전달하도록 추가

* chore: VSC 디버깅 설정 제거

* chore: node 및 pnpm 버전 고정

* refactor: 내부 서비스명 {serviceName}Client로 통일 및 에러 처리 수정

* refactor: 인증 enum 타입 추가 및 UserClientException 에러 정의

--- a/environments/.env.development
+++ b/environments/.env.development
@@ -10,3 +10,6 @@ TEMPORARY_JWT_EXPIRE='30m'
 # Auth JWT 구성
 AUTH_JWT_SECRET='my-auth-jwt-secret'
 AUTH_JWT_EXPIRE='1d'
+
+# MSA 설정
+USER_CLIENT_PATH=http://localhost:8080
