--- a/environments/.env.local
+++ b/environments/.env.local
@@ -10,3 +10,6 @@ TEMPORARY_JWT_EXPIRE='30m'
 # Auth JWT 구성
 AUTH_JWT_SECRET='my-auth-jwt-secret'
 AUTH_JWT_EXPIRE='1d'
+
+# MSA 설정
+USER_CLIENT_PATH=http://localhost:8080
