--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.451.0",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "3.0.0",
@@ -47,7 +48,8 @@
     "class-validator": "^0.14.0",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
