--- a/environments/.env.local
+++ b/environments/.env.local
@@ -1,7 +1,7 @@
 # 서비스 구성
 ENVIRONMENT=local
 SERVICE_NAME=BFF
-SERVICE_PORT=8081
+SERVICE_PORT=8080
 
 # 임시 JWT 구성
 TEMPORARY_JWT_SECRET='my-temporary-jwt-secret'
@@ -12,4 +12,5 @@ AUTH_JWT_SECRET='my-auth-jwt-secret'
 AUTH_JWT_EXPIRE='1d'
 
 # MSA 설정
-USER_CLIENT_PATH=http://localhost:8080
+USER_CLIENT_PATH=http://localhost:8081
+SOCIAL_CLIENT_PATH=http://localhost:8082
